# wgpustein

./: Cargo.toml  Makefile  rustfmt.toml
src/: fps_counter.rs  gfx.rs  index.html  input.rs  lib.rs  transform.rs
src/entities/: player.rs
src/shaders/: quad.wgsl
