[package]
name = "wgpustein"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy_app = { version = "0.16.1", features = ["web"] }
bevy_ecs = "0.16.1"
bevy_input = { version = "0.16.1", features = ["libm"] }
bevy_math = { version = "0.16.1", features = ["libm"] }
bevy_platform = { version = "0.16.1", features = ["web"] }
bevy_reflect = { version = "0.16.1", features = ["critical-section", "web"] }
bevy_time = "0.16.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-util = "0.3.31"
inventory = "0.3.20"
log = { version = "0.4.27", features = ["std", "max_level_trace", "release_max_level_info"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"Event",
	"EventTarget",
	"gpu_buffer_usage",
	"gpu_shader_stage",
	"Gpu",
	"GpuAdapter",
	"GpuAdapterInfo",
	"GpuAddressMode",
	"GpuAutoLayoutMode",
	"GpuBindGroup",
	"GpuBindGroupDescriptor",
	"GpuBindGroupEntry",
	"GpuBindGroupLayout",
	"GpuBindGroupLayoutDescriptor",
	"GpuBindGroupLayoutEntry",
	"GpuBlendComponent",
	"GpuBlendFactor",
	"GpuBlendOperation",
	"GpuBlendState",
	"GpuBuffer",
	"GpuBufferBinding",
	"GpuBufferBindingLayout",
	"GpuBufferBindingType",
	"GpuBufferDescriptor",
	"GpuBufferMapState",
	"GpuCanvasAlphaMode",
	"GpuCanvasConfiguration",
	"GpuCanvasContext",
	"GpuCanvasToneMapping",
	"GpuCanvasToneMappingMode",
	"GpuColorDict",
	"GpuColorTargetState",
	"GpuCommandBuffer",
	"GpuCommandBufferDescriptor",
	"GpuCommandEncoder",
	"GpuCommandEncoderDescriptor",
	"GpuCompareFunction",
	"GpuCompilationInfo",
	"GpuCompilationMessage",
	"GpuCompilationMessageType",
	"GpuComputePassDescriptor",
	"GpuComputePassEncoder",
	"GpuComputePassTimestampWrites",
	"GpuComputePipeline",
	"GpuComputePipelineDescriptor",
	"GpuCopyExternalImageDestInfo",
	"GpuCopyExternalImageSourceInfo",
	"GpuCullMode",
	"GpuDepthStencilState",
	"GpuDevice",
	"GpuDeviceDescriptor",
	"GpuDeviceLostInfo",
	"GpuDeviceLostReason",
	"GpuError",
	"GpuErrorFilter",
	"GpuExtent3dDict",
	"GpuExternalTexture",
	"GpuExternalTextureBindingLayout",
	"GpuExternalTextureDescriptor",
	"GpuFeatureName",
	"GpuFilterMode",
	"GpuFragmentState",
	"GpuFrontFace",
	"GpuIndexFormat",
	"GpuInternalError",
	"GpuLoadOp",
	"GpuMipmapFilterMode",
	"GpuMultisampleState",
	"GpuObjectDescriptorBase",
	"GpuOrigin2dDict",
	"GpuOrigin3dDict",
	"GpuOutOfMemoryError",
	"GpuPipelineDescriptorBase",
	"GpuPipelineError",
	"GpuPipelineErrorInit",
	"GpuPipelineErrorReason",
	"GpuPipelineLayout",
	"GpuPipelineLayoutDescriptor",
	"GpuPowerPreference",
	"GpuPrimitiveState",
	"GpuPrimitiveTopology",
	"GpuProgrammableStage",
	"GpuQuerySet",
	"GpuQuerySetDescriptor",
	"GpuQueryType",
	"GpuQueue",
	"GpuQueueDescriptor",
	"GpuRenderBundle",
	"GpuRenderBundleDescriptor",
	"GpuRenderBundleEncoder",
	"GpuRenderBundleEncoderDescriptor",
	"GpuRenderPassColorAttachment",
	"GpuRenderPassDepthStencilAttachment",
	"GpuRenderPassDescriptor",
	"GpuRenderPassEncoder",
	"GpuRenderPassLayout",
	"GpuRenderPassTimestampWrites",
	"GpuRenderPipeline",
	"GpuRenderPipelineDescriptor",
	"GpuRequestAdapterOptions",
	"GpuSampler",
	"GpuSamplerBindingLayout",
	"GpuSamplerBindingType",
	"GpuSamplerDescriptor",
	"GpuShaderModule",
	"GpuShaderModuleCompilationHint",
	"GpuShaderModuleDescriptor",
	"GpuStencilFaceState",
	"GpuStencilOperation",
	"GpuStorageTextureAccess",
	"GpuStorageTextureBindingLayout",
	"GpuStoreOp",
	"GpuSupportedFeatures",
	"GpuSupportedLimits",
	"GpuTexelCopyBufferInfo",
	"GpuTexelCopyBufferLayout",
	"GpuTexelCopyTextureInfo",
	"GpuTexture",
	"GpuTextureAspect",
	"GpuTextureBindingLayout",
	"GpuTextureDescriptor",
	"GpuTextureDimension",
	"GpuTextureFormat",
	"GpuTextureSampleType",
	"GpuTextureView",
	"GpuTextureViewDescriptor",
	"GpuTextureViewDimension",
	"GpuUncapturedErrorEvent",
	"GpuUncapturedErrorEventInit",
	"GpuValidationError",
	"GpuVertexAttribute",
	"GpuVertexBufferLayout",
	"GpuVertexFormat",
	"GpuVertexState",
	"GpuVertexStepMode",
	"HtmlCanvasElement",
	"HtmlElement",
	"KeyboardEvent",
	"MouseEvent",
	"Navigator",
	"Node",
	"Window",
]
